# feature-engineering-handbook

./: .gitignore  1. Data Preprocessing.ipynb  2. Feature Selection.ipynb  3. Dimension Reduction.ipynb  README.md  main.py  pyproject.toml  中文版.md
中文版/: 1. 数据预处理.ipynb  2. 特征选择.ipynb  3. 特征降维.ipynb  GA.py  SA.py  laplacian_score.py
中文版/sklearn_mrmr/: mrmr.py
